# wechat-memory

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  README.zh.md  SECURITY.md  pyproject.toml
.agents/skills/wechat-memory/: SKILL.md
.agents/skills/wechat-memory/references/: architecture.md  retrieval.md  scripts.md  wiki-query-comparison.md
.agents/skills/wechat-memory/scripts/: classify  evidence  import-json  index  person  profile  retrieve  status
.github/: CODEOWNERS
.github/workflows/: test.yml
docs/: architecture.md  data-contract.md  risk-and-data-sources.md
examples/: demo.json
schemas/: import.schema.json  query.schema.json
src/wechat_memory/: agent.py  classify.py  cli.py  db.py  importer.py  message_content.py  profiles.py  query.py  semantic.py  store.py  ui.py  views.py
src/wechat_memory/schemas/: profile.schema.json  query.schema.json
src/wechat_memory/web/: app.css  app.js  index.html
tests/: skill-cases.yaml  test_core.py
