[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-memory"
version = "0.1.0"
description = "Local, traceable WeChat person memory"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Yinghao Tang"}]
keywords = ["wechat", "memory", "people", "sqlite", "fts5", "local-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/interesting-vibe-coding/wechat-memory"
Issues = "https://github.com/interesting-vibe-coding/wechat-memory/issues"

[project.scripts]
wechat-memory = "wechat_memory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wechat_memory = ["web/*.html", "web/*.css", "web/*.js", "schemas/*.json"]
